--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.60.5",
+    "@turf/turf": "^7.2.0",
     "@types/leaflet": "^1.9.20",
     "@types/memoizee": "^0.4.12",
     "@types/pg": "^8.15.5",
