--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "@types/leaflet": "^1.9.20",
     "@types/memoizee": "^0.4.12",
     "@types/pg": "^8.15.5",
+    "@types/react-helmet": "^6.1.11",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -80,8 +82,10 @@
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "react": "^19.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.4.0",
