--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.60.5",
     "@turf/turf": "^7.2.0",
@@ -54,6 +56,7 @@
     "@types/memoizee": "^0.4.12",
     "@types/pg": "^8.15.5",
     "@types/react-helmet": "^6.1.11",
+    "@types/three": "^0.182.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
@@ -95,6 +98,8 @@
     "serverless-http": "^3.2.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.116.1",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
