--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "ethers": "^6.15.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "form-data": "^4.0.5",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
     "ipfs-http-client": "^60.0.1",
@@ -80,6 +81,7 @@
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "openid-client": "^6.6.2",
@@ -118,6 +120,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
