feat: Add new API routes for authentication, IPFS uploads, location tracking, weather updates, and free polygons via a Vercel serverless function.

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
             "destination": "/api/dummy.ts"
         },
         {
+            "source": "/api/free-polygons",
+            "destination": "/api/free-polygons.ts"
+        },
+        {
             "source": "/api/(.*)",
             "destination": "/api/index.ts"
         },
