--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@types/ws": "^8.5.13",
+    "@vercel/node": "^5.5.16",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.0.0",
