feat: Introduce multiple new API endpoints for various services and configure Vercel routing.

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,54 @@
             "destination": "/api/free-polygons.ts"
         },
         {
+            "source": "/api/auth/login",
+            "destination": "/api/auth/login.ts"
+        },
+        {
+            "source": "/api/paths",
+            "destination": "/api/paths.ts"
+        },
+        {
+            "source": "/api/delete-userpath",
+            "destination": "/api/delete-userpath.ts"
+        },
+        {
+            "source": "/api/save-polygons",
+            "destination": "/api/save-polygons.ts"
+        },
+        {
+            "source": "/api/freenfts",
+            "destination": "/api/freenfts.ts"
+        },
+        {
+            "source": "/api/save-generated-polygon",
+            "destination": "/api/save-generated-polygon.ts"
+        },
+        {
+            "source": "/api/tokeninfo",
+            "destination": "/api/tokeninfo.ts"
+        },
+        {
+            "source": "/api/get-id",
+            "destination": "/api/get-id.ts"
+        },
+        {
+            "source": "/api/save-coordinates",
+            "destination": "/api/save-coordinates.ts"
+        },
+        {
+            "source": "/api/UpdateallCoordinates/WeatherReport",
+            "destination": "/api/update-weather.ts"
+        },
+        {
+            "source": "/api/send-msg-approval",
+            "destination": "/api/send-msg-approval.ts"
+        },
+        {
+            "source": "/api/test-db",
+            "destination": "/api/test-db.ts"
+        },
+        {
             "source": "/api/(.*)",
             "destination": "/api/index.ts"
         },
